<resources>
    <string name="app_name">Interstellar</string>
    <string name="text1">Do not go gentle into that good night,</string>
    <string name="text2">Old age should burn and rave at close of day;</string>
    <string name="text3">Rage, rage against the dying of the light.</string>
    <string name="text4">SpaceX</string>
    <string name="text5">Making Life Multiplanetary</string>
</resources>
